k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/db-nw: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: APP_SECRET_KEY
          value: secret
        - name: POSTGRES_DB
          value: flaskapp-db
        - name: POSTGRES_PASSWORD
          value: password
        - name: POSTGRES_USER
          value: postgres
        - name: ROCKET_CHAT_PASSWORD
          value: weakServicePassword
        - name: ROCKET_CHAT_USER
          value: service-user
        image: postgres:9.6.5
        imagePullPolicy: ""
        name: db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: dbdata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: dbdata
        persistentVolumeClaim:
          claimName: dbdata
status: {}
