k8s/db_nw-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: db-nw
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/db-nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/db-nw: "true"
