k8s/web_nw-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: web-nw
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/web-nw: "true"
  podSelector:
    matchLabels:
      io.kompose.network/web-nw: "true"
